--- a/src/app/structure/main-inner/main-inner.component.html
+++ b/src/app/structure/main-inner/main-inner.component.html
@@ -61,6 +61,7 @@
                 <td>{{project.contractNo}}</td>
                 <td>{{project.projectNo}}</td>
                 <td>{{project.projectTitle}}</td>
+                <td>{{project.progress}}</td>
                 <!-- <td>{{product.name}}</td>
                 <td><img [src]="'assets/showcase/images/demo/product/' + product.image" [alt]="product.name" width="100" class="p-shadow-4" /></td>
                 <td>{{product.price | currency:'USD'}}</td>
