--- a/src/app/structure/topmenu/topmenu.component.html
+++ b/src/app/structure/topmenu/topmenu.component.html
@@ -2,6 +2,25 @@
   <p-menubar [model]="topMenuItems">
     <input type="text" pInputText placeholder="Search">
 </p-menubar>
-<!-- Search
-<button pButton type="button" label="Click" (click)="leDioClick()" ></button>
- -->
+
+
+
+ 
+
+ <!-- TEST FOR OVERLAY MENUS -->
+ <!-- <p-overlayPanel #op>
+  <ng-template pTemplate>
+      Content
+      <br/>
+      Content
+  </ng-template>
+</p-overlayPanel>
+
+<button pButton pRipple type="button" label="Secondary" class="p-button-secondary p-button-text" (click)="op.toggle($event)"></button>
+<button pButton pRipple type="button" label="Secondary" class="p-button-secondary p-button-text" (click)="op.toggle($event)"></button>
+<button pButton pRipple type="button" label="Secondary" class="p-button-secondary p-button-text" (click)="op.toggle($event)"></button>
+<button pButton pRipple type="button" label="Secondary" class="p-button-secondary p-button-text" (click)="op.toggle($event)"></button>
+<button pButton pRipple type="button" label="Secondary" class="p-button-secondary p-button-text" (click)="op.toggle($event)"></button>
+-->
+ <!-- END OF TEST FOR OVERLAY MENUS -->
+
